lib/janet.h

typedef struct JanetOSMutex JanetOSMutex;
typedef struct JanetOSRWLock JanetOSRWLock;
typedef struct JanetChannel JanetChannel;
typedef void *JanetHandle;
typedef int JanetHandle;
typedef enum {
  JANET_SIGNAL_OK,
  JANET_SIGNAL_ERROR,
  JANET_SIGNAL_DEBUG,
  JANET_SIGNAL_YIELD,
  JANET_SIGNAL_USER0,
  JANET_SIGNAL_USER1,
  JANET_SIGNAL_USER2,
  JANET_SIGNAL_USER3,
  JANET_SIGNAL_USER4,
  JANET_SIGNAL_USER5,
  JANET_SIGNAL_USER6,
  JANET_SIGNAL_USER7,
  JANET_SIGNAL_USER8,
  JANET_SIGNAL_USER9,
  JANET_SIGNAL_INTERRUPT = JANET_SIGNAL_USER8,
  JANET_SIGNAL_EVENT = JANET_SIGNAL_USER9,
} JanetSignal;
typedef struct JanetVM JanetVM;
typedef struct JanetGCObject JanetGCObject;
typedef struct JanetArray JanetArray;
typedef struct JanetBuffer JanetBuffer;
typedef struct JanetTable JanetTable;
typedef struct JanetFiber JanetFiber;
typedef struct JanetFuncDef JanetFuncDef;
typedef struct JanetKV JanetKV;
typedef struct JanetAbstractType JanetAbstractType;
typedef struct JanetMethod JanetMethod;
typedef struct JanetSourceMapping JanetSourceMapping;
typedef struct JanetSymbolMap JanetSymbolMap;
typedef struct JanetByteView JanetByteView;
typedef enum JanetType {
  JANET_NUMBER,
  JANET_NIL,
  JANET_BOOLEAN,
  JANET_FIBER,
  JANET_STRING,
  JANET_SYMBOL,
  JANET_KEYWORD,
  JANET_ARRAY,
  JANET_TUPLE,
  JANET_TABLE,
  JANET_STRUCT,
  JANET_BUFFER,
  JANET_FUNCTION,
  JANET_CFUNCTION,
  JANET_ABSTRACT,
  JANET_POINTER
} JanetType;
typedef union Janet Janet;
union Janet {
  uint64_t u64;
  int64_t i64;
  double number;
  void *pointer;
};
typedef union Janet Janet;
union Janet {
  struct {
#ifdef JANET_BIG_ENDIAN
    uint32_t type;
    union {
      int32_t integer;
      void *pointer;
    } payload;
#else
    union {
      int32_t integer;
      void *pointer;
    } payload;
    uint32_t type;
#endif
  } tagged;
  double number;
  uint64_t u64;
};
typedef struct Janet Janet;
struct Janet {
  union {
    uint64_t u64;
    double number;
    int32_t integer;
    void *pointer;
    const void *cpointer;
  } as;
  JanetType type;
};
typedef Janet (*JanetCFunction)(int32_t argc, Janet *argv);
typedef const uint8_t *JanetString;
typedef struct JanetStream JanetStream;
struct JanetStream {
  JanetHandle handle;
  uint32_t flags;
  uint32_t index;
  JanetFiber *read_fiber;
  JanetFiber *write_fiber;
  const void *methods; 
};
typedef void (*JanetEVCallback)(JanetFiber *fiber, JanetAsyncEvent event);
struct JanetGCObject {
  int32_t flags;
  union {
    JanetGCObject *next;
    volatile JanetAtomicInt refcount; 
  } data;
};
struct JanetFiber {
  JanetGCObject gc;   
  int32_t flags;      
  int32_t frame;      
  int32_t stackstart; 
  int32_t stacktop; 
  int32_t capacity; 
  int32_t maxstack; 
  JanetTable *env;  
  Janet *data;      
  JanetFiber
      *child; 
  Janet last_value; 
#ifdef JANET_EV
  uint32_t sched_id; 
  JanetEVCallback ev_callback; 
  JanetStream *ev_stream;      
  void *ev_state; 
  void *supervisor_channel; 
#endif
};
struct JanetArray {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  Janet *data;
};
struct JanetBuffer {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  uint8_t *data;
};
struct JanetTable {
  JanetGCObject gc;
  int32_t count;
  int32_t capacity;
  int32_t deleted;
  JanetKV *data;
  JanetTable *proto;
};
struct JanetKV {
  Janet key;
  Janet value;
};
struct JanetSourceMapping {
  int32_t line;
  int32_t column;
};
struct JanetSymbolMap {
  uint32_t birth_pc;
  uint32_t death_pc;
  uint32_t slot_index;
  const uint8_t *symbol;
};
struct JanetFuncDef {
  JanetGCObject gc;
  int32_t *environments; 
  Janet *constants;
  JanetFuncDef **defs;
  uint32_t *bytecode;
  uint32_t *closure_bitset; 
  JanetSourceMapping *sourcemap;
  JanetString source;
  JanetString name;
  JanetSymbolMap *symbolmap;
  int32_t flags;
  int32_t slotcount; 
  int32_t arity;     
  int32_t min_arity; 
  int32_t max_arity; 
  int32_t constants_length;
  int32_t bytecode_length;
  int32_t environments_length;
  int32_t defs_length;
  int32_t symbolmap_length;
};
typedef struct JanetParseState JanetParseState;
typedef struct JanetParser JanetParser;
enum JanetParserStatus {
  JANET_PARSE_ROOT,
  JANET_PARSE_ERROR,
  JANET_PARSE_PENDING,
  JANET_PARSE_DEAD
};
struct JanetParser {
  Janet *args;
  const char *error;
  JanetParseState *states;
  uint8_t *buf;
  size_t argcount;
  size_t argcap;
  size_t statecount;
  size_t statecap;
  size_t bufcount;
  size_t bufcap;
  size_t line;
  size_t column;
  size_t pending;
  int lookback;
  int flag;
};
typedef struct {
  void *m_state;
  void *u_state;
  int flags;
  const uint8_t *data;
  const JanetAbstractType *at;
} JanetMarshalContext;
struct JanetAbstractType {
  const char *name;
  int (*gc)(void *data, size_t len);
  int (*gcmark)(void *data, size_t len);
  int (*get)(void *data, Janet key, Janet *out);
  void (*put)(void *data, Janet key, Janet value);
  void (*marshal)(void *p, JanetMarshalContext *ctx);
  void *(*unmarshal)(JanetMarshalContext *ctx);
  void (*tostring)(void *p, JanetBuffer *buffer);
  int (*compare)(void *lhs, void *rhs);
  int32_t (*hash)(void *p, size_t len);
  Janet (*next)(void *p, Janet key);
  Janet (*call)(void *p, int32_t argc, Janet *argv);
  size_t (*length)(void *p, size_t len);
  JanetByteView (*bytes)(void *p, size_t len);
};
struct JanetMethod {
  const char *name;
  JanetCFunction cfun;
};
struct JanetByteView {
  const uint8_t *bytes;
  int32_t len;
};
JANET_API JanetStream *janet_stream(JanetHandle handle, uint32_t flags,
                                    const JanetMethod *methods);
JANET_API JanetStream *
janet_stream_ext(JanetHandle handle, uint32_t flags, const JanetMethod *methods,
                 size_t size); 
JANET_API void janet_stream_close(JanetStream *stream);
JANET_API Janet janet_cfun_stream_close(int32_t argc, Janet *argv);
JANET_API Janet janet_cfun_stream_read(int32_t argc, Janet *argv);
JANET_API Janet janet_cfun_stream_chunk(int32_t argc, Janet *argv);
JANET_API Janet janet_cfun_stream_write(int32_t argc, Janet *argv);
JANET_API void janet_stream_flags(JanetStream *stream, uint32_t flags);
JANET_API void janet_schedule(JanetFiber *fiber, Janet value);
JANET_API void janet_cancel(JanetFiber *fiber, Janet value);
JANET_API void janet_schedule_signal(JanetFiber *fiber, Janet value,
                                     JanetSignal sig);
JANET_API void janet_schedule_soon(JanetFiber *fiber, Janet value,
                                   JanetSignal sig);
JANET_NO_RETURN JANET_API void janet_await(void);
JANET_NO_RETURN JANET_API void janet_sleep_await(double sec);
JANET_API void janet_addtimeout(double sec);
JANET_API void janet_addtimeout_nil(double sec);
JANET_API void janet_ev_inc_refcount(void);
JANET_API void janet_ev_dec_refcount(void);
JANET_API void *janet_abstract_begin_threaded(const JanetAbstractType *atype,
                                              size_t size);
JANET_API void *janet_abstract_end_threaded(void *x);
JANET_API void *janet_abstract_threaded(const JanetAbstractType *atype,
                                        size_t size);
JANET_API int32_t janet_abstract_incref(void *abst);
JANET_API int32_t janet_abstract_decref(void *abst);
JanetChannel *janet_channel_make(uint32_t limit);
JanetChannel *janet_channel_make_threaded(uint32_t limit);
JanetChannel *janet_getchannel(const Janet *argv, int32_t n);
JanetChannel *janet_optchannel(const Janet *argv, int32_t argc, int32_t n,
                               JanetChannel *dflt);
JANET_API int janet_channel_give(JanetChannel *channel, Janet x);
JANET_API int janet_channel_take(JanetChannel *channel, Janet *out);
JANET_API size_t janet_os_mutex_size(void);
JANET_API size_t janet_os_rwlock_size(void);
JANET_API void janet_os_mutex_init(JanetOSMutex *mutex);
JANET_API void janet_os_mutex_deinit(JanetOSMutex *mutex);
JANET_API void janet_os_mutex_lock(JanetOSMutex *mutex);
JANET_API void janet_os_mutex_unlock(JanetOSMutex *mutex);
JANET_API void janet_os_rwlock_init(JanetOSRWLock *rwlock);
JANET_API void janet_os_rwlock_deinit(JanetOSRWLock *rwlock);
JANET_API void janet_os_rwlock_rlock(JanetOSRWLock *rwlock);
JANET_API void janet_os_rwlock_wlock(JanetOSRWLock *rwlock);
JANET_API void janet_os_rwlock_runlock(JanetOSRWLock *rwlock);
JANET_API void janet_os_rwlock_wunlock(JanetOSRWLock *rwlock);
JANET_API Janet janet_ev_lasterr(void);
typedef struct {
  int tag;
  int argi;
  void *argp;
  Janet argj;
  JanetFiber *fiber;
} JanetEVGenericMessage;
typedef JanetEVGenericMessage (*JanetThreadedSubroutine)(
    JanetEVGenericMessage arguments);
typedef void (*JanetCallback)(JanetEVGenericMessage return_value);
typedef void (*JanetThreadedCallback)(JanetEVGenericMessage return_value);
JANET_API void janet_ev_threaded_call(JanetThreadedSubroutine fp,
                                      JanetEVGenericMessage arguments,
                                      JanetThreadedCallback cb);
JANET_NO_RETURN JANET_API void
janet_ev_threaded_await(JanetThreadedSubroutine fp, int tag, int argi,
                        void *argp);
JANET_API void janet_ev_post_event(JanetVM *vm, JanetCallback cb,
                                   JanetEVGenericMessage msg);
JANET_API void
janet_ev_default_threaded_callback(JanetEVGenericMessage return_value);
JANET_NO_RETURN JANET_API void janet_ev_read(JanetStream *stream,
                                             JanetBuffer *buf, int32_t nbytes);
JANET_NO_RETURN JANET_API void
janet_ev_readchunk(JanetStream *stream, JanetBuffer *buf, int32_t nbytes);
JANET_NO_RETURN JANET_API void
janet_ev_recv(JanetStream *stream, JanetBuffer *buf, int32_t nbytes, int flags);
JANET_NO_RETURN JANET_API void janet_ev_recvchunk(JanetStream *stream,
                                                  JanetBuffer *buf,
                                                  int32_t nbytes, int flags);
JANET_NO_RETURN JANET_API void janet_ev_recvfrom(JanetStream *stream,
                                                 JanetBuffer *buf,
                                                 int32_t nbytes, int flags);
JANET_NO_RETURN JANET_API void janet_ev_write_buffer(JanetStream *stream,
                                                     JanetBuffer *buf);
JANET_NO_RETURN JANET_API void janet_ev_write_string(JanetStream *stream,
                                                     JanetString str);
JANET_NO_RETURN JANET_API void
janet_ev_send_buffer(JanetStream *stream, JanetBuffer *buf, int flags);
JANET_NO_RETURN JANET_API void janet_ev_send_string(JanetStream *stream,
                                                    JanetString str, int flags);
JANET_NO_RETURN JANET_API void janet_ev_sendto_buffer(JanetStream *stream,
                                                      JanetBuffer *buf,
                                                      void *dest, int flags);
JANET_NO_RETURN JANET_API void janet_ev_sendto_string(JanetStream *stream,
                                                      JanetString str,
                                                      void *dest, int flags);
extern JANET_API const JanetAbstractType janet_parser_type;
JANET_API void janet_parser_init(JanetParser *parser);
JANET_API void janet_parser_deinit(JanetParser *parser);
JANET_API void janet_parser_consume(JanetParser *parser, uint8_t c);
JANET_API enum JanetParserStatus janet_parser_status(JanetParser *parser);
JANET_API Janet janet_parser_produce(JanetParser *parser);
JANET_API Janet janet_parser_produce_wrapped(JanetParser *parser);
JANET_API const char *janet_parser_error(JanetParser *parser);
JANET_API void janet_parser_flush(JanetParser *parser);
JANET_API void janet_parser_eof(JanetParser *parser);
JANET_API int janet_parser_has_more(JanetParser *parser);
typedef struct JanetAssembleResult JanetAssembleResult;
enum JanetAssembleStatus { JANET_ASSEMBLE_OK, JANET_ASSEMBLE_ERROR };
struct JanetAssembleResult {
  JanetFuncDef *funcdef;
  JanetString error;
  enum JanetAssembleStatus status;
};
JANET_API JanetAssembleResult janet_asm(Janet source, int flags);
JANET_API Janet janet_disasm(JanetFuncDef *def);
JANET_API Janet janet_asm_decode_instruction(uint32_t instr);
typedef struct JanetCompileResult JanetCompileResult;
enum JanetCompileStatus { JANET_COMPILE_OK, JANET_COMPILE_ERROR };
struct JanetCompileResult {
  JanetFuncDef *funcdef;
  JanetString error;
  JanetFiber *macrofiber;
  JanetSourceMapping error_mapping;
  enum JanetCompileStatus status;
};
JANET_API JanetCompileResult janet_compile(Janet source, JanetTable *env,
                                           JanetString where);
JANET_API JanetCompileResult janet_compile_lint(Janet source, JanetTable *env,
                                                JanetString where,
                                                JanetArray *lints);