janet_bindings/src/bindings.rs

unsafe extern "C" {
    pub fn janet_stream(
        handle: JanetHandle,
        flags: u32,
        methods: *const JanetMethod,
    ) -> *mut JanetStream;
}
unsafe extern "C" {
    pub fn janet_stream_ext(
        handle: JanetHandle,
        flags: u32,
        methods: *const JanetMethod,
        size: usize,
    ) -> *mut JanetStream;
}
unsafe extern "C" {
    pub fn janet_stream_close(stream: *mut JanetStream);
}
unsafe extern "C" {
    pub fn janet_cfun_stream_close(argc: i32, argv: *mut Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_cfun_stream_read(argc: i32, argv: *mut Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_cfun_stream_chunk(argc: i32, argv: *mut Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_cfun_stream_write(argc: i32, argv: *mut Janet) -> Janet;
}
unsafe extern "C" {
    pub fn janet_stream_flags(stream: *mut JanetStream, flags: u32);
}
unsafe extern "C" {
    pub fn janet_schedule(fiber: *mut JanetFiber, value: Janet);
}
unsafe extern "C" {
    pub fn janet_cancel(fiber: *mut JanetFiber, value: Janet);
}
unsafe extern "C" {
    pub fn janet_schedule_signal(fiber: *mut JanetFiber, value: Janet, sig: JanetSignal);
}
unsafe extern "C" {
    pub fn janet_schedule_soon(fiber: *mut JanetFiber, value: Janet, sig: JanetSignal);
}
unsafe extern "C" {
    pub fn janet_await() -> !;
}
unsafe extern "C" {
    pub fn janet_sleep_await(sec: f64) -> !;
}
unsafe extern "C" {
    pub fn janet_addtimeout(sec: f64);
}
unsafe extern "C" {
    pub fn janet_addtimeout_nil(sec: f64);
}
unsafe extern "C" {
    pub fn janet_ev_inc_refcount();
}
unsafe extern "C" {
    pub fn janet_ev_dec_refcount();
}
unsafe extern "C" {
    pub fn janet_abstract_begin_threaded(
        atype: *const JanetAbstractType,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_abstract_end_threaded(
        x: *mut ::std::os::raw::c_void,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_abstract_threaded(
        atype: *const JanetAbstractType,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;
}
unsafe extern "C" {
    pub fn janet_abstract_incref(abst: *mut ::std::os::raw::c_void) -> i32;
}
unsafe extern "C" {
    pub fn janet_abstract_decref(abst: *mut ::std::os::raw::c_void) -> i32;
}
unsafe extern "C" {
    pub fn janet_channel_make(limit: u32) -> *mut JanetChannel;
}
unsafe extern "C" {
    pub fn janet_channel_make_threaded(limit: u32) -> *mut JanetChannel;
}
unsafe extern "C" {
    pub fn janet_getchannel(argv: *const Janet, n: i32) -> *mut JanetChannel;
}
unsafe extern "C" {
    pub fn janet_optchannel(
        argv: *const Janet,
        argc: i32,
        n: i32,
        dflt: *mut JanetChannel,
    ) -> *mut JanetChannel;
}
unsafe extern "C" {
    pub fn janet_channel_give(channel: *mut JanetChannel, x: Janet) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_channel_take(channel: *mut JanetChannel, out: *mut Janet)
    -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn janet_os_mutex_size() -> usize;
}
unsafe extern "C" {
    pub fn janet_os_rwlock_size() -> usize;
}
unsafe extern "C" {
    pub fn janet_os_mutex_init(mutex: *mut JanetOSMutex);
}
unsafe extern "C" {
    pub fn janet_os_mutex_deinit(mutex: *mut JanetOSMutex);
}
unsafe extern "C" {
    pub fn janet_os_mutex_lock(mutex: *mut JanetOSMutex);
}
unsafe extern "C" {
    pub fn janet_os_mutex_unlock(mutex: *mut JanetOSMutex);
}
unsafe extern "C" {
    pub fn janet_os_rwlock_init(rwlock: *mut JanetOSRWLock);
}
unsafe extern "C" {
    pub fn janet_os_rwlock_deinit(rwlock: *mut JanetOSRWLock);
}
unsafe extern "C" {
    pub fn janet_os_rwlock_rlock(rwlock: *mut JanetOSRWLock);
}
unsafe extern "C" {
    pub fn janet_os_rwlock_wlock(rwlock: *mut JanetOSRWLock);
}
unsafe extern "C" {
    pub fn janet_os_rwlock_runlock(rwlock: *mut JanetOSRWLock);
}
unsafe extern "C" {
    pub fn janet_os_rwlock_wunlock(rwlock: *mut JanetOSRWLock);
}
unsafe extern "C" {
    pub fn janet_ev_lasterr() -> Janet;
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct JanetEVGenericMessage {
    pub tag: ::std::os::raw::c_int,
    pub argi: ::std::os::raw::c_int,
    pub argp: *mut ::std::os::raw::c_void,
    pub argj: Janet,
    pub fiber: *mut JanetFiber,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetEVGenericMessage"][::std::mem::size_of::<JanetEVGenericMessage>() - 32usize];
    ["Alignment of JanetEVGenericMessage"]
        [::std::mem::align_of::<JanetEVGenericMessage>() - 8usize];
    ["Offset of field: JanetEVGenericMessage::tag"]
        [::std::mem::offset_of!(JanetEVGenericMessage, tag) - 0usize];
    ["Offset of field: JanetEVGenericMessage::argi"]
        [::std::mem::offset_of!(JanetEVGenericMessage, argi) - 4usize];
    ["Offset of field: JanetEVGenericMessage::argp"]
        [::std::mem::offset_of!(JanetEVGenericMessage, argp) - 8usize];
    ["Offset of field: JanetEVGenericMessage::argj"]
        [::std::mem::offset_of!(JanetEVGenericMessage, argj) - 16usize];
    ["Offset of field: JanetEVGenericMessage::fiber"]
        [::std::mem::offset_of!(JanetEVGenericMessage, fiber) - 24usize];
};
pub type JanetThreadedSubroutine = ::std::option::Option<
    unsafe extern "C" fn(arguments: JanetEVGenericMessage) -> JanetEVGenericMessage,
>;
pub type JanetCallback =
    ::std::option::Option<unsafe extern "C" fn(return_value: JanetEVGenericMessage)>;
pub type JanetThreadedCallback =
    ::std::option::Option<unsafe extern "C" fn(return_value: JanetEVGenericMessage)>;
unsafe extern "C" {
    pub fn janet_ev_threaded_call(
        fp: JanetThreadedSubroutine,
        arguments: JanetEVGenericMessage,
        cb: JanetThreadedCallback,
    );
}
unsafe extern "C" {
    pub fn janet_ev_threaded_await(
        fp: JanetThreadedSubroutine,
        tag: ::std::os::raw::c_int,
        argi: ::std::os::raw::c_int,
        argp: *mut ::std::os::raw::c_void,
    ) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_post_event(vm: *mut JanetVM, cb: JanetCallback, msg: JanetEVGenericMessage);
}
unsafe extern "C" {
    pub fn janet_ev_default_threaded_callback(return_value: JanetEVGenericMessage);
}
unsafe extern "C" {
    pub fn janet_ev_read(stream: *mut JanetStream, buf: *mut JanetBuffer, nbytes: i32) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_readchunk(stream: *mut JanetStream, buf: *mut JanetBuffer, nbytes: i32) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_recv(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        nbytes: i32,
        flags: ::std::os::raw::c_int,
    ) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_recvchunk(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        nbytes: i32,
        flags: ::std::os::raw::c_int,
    ) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_recvfrom(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        nbytes: i32,
        flags: ::std::os::raw::c_int,
    ) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_write_buffer(stream: *mut JanetStream, buf: *mut JanetBuffer) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_write_string(stream: *mut JanetStream, str_: JanetString) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_send_buffer(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        flags: ::std::os::raw::c_int,
    ) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_send_string(
        stream: *mut JanetStream,
        str_: JanetString,
        flags: ::std::os::raw::c_int,
    ) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_sendto_buffer(
        stream: *mut JanetStream,
        buf: *mut JanetBuffer,
        dest: *mut ::std::os::raw::c_void,
        flags: ::std::os::raw::c_int,
    ) -> !;
}
unsafe extern "C" {
    pub fn janet_ev_sendto_string(
        stream: *mut JanetStream,
        str_: JanetString,
        dest: *mut ::std::os::raw::c_void,
        flags: ::std::os::raw::c_int,
    ) -> !;
}
unsafe extern "C" {
    pub static janet_parser_type: JanetAbstractType;
}
unsafe extern "C" {
    pub fn janet_parser_init(parser: *mut JanetParser);
}
unsafe extern "C" {
    pub fn janet_parser_deinit(parser: *mut JanetParser);
}
unsafe extern "C" {
    pub fn janet_parser_consume(parser: *mut JanetParser, c: u8);
}
unsafe extern "C" {
    pub fn janet_parser_status(parser: *mut JanetParser) -> JanetParserStatus;
}
unsafe extern "C" {
    pub fn janet_parser_produce(parser: *mut JanetParser) -> Janet;
}
unsafe extern "C" {
    pub fn janet_parser_produce_wrapped(parser: *mut JanetParser) -> Janet;
}
unsafe extern "C" {
    pub fn janet_parser_error(parser: *mut JanetParser) -> *const ::std::os::raw::c_char;
}
unsafe extern "C" {
    pub fn janet_parser_flush(parser: *mut JanetParser);
}
unsafe extern "C" {
    pub fn janet_parser_eof(parser: *mut JanetParser);
}
unsafe extern "C" {
    pub fn janet_parser_has_more(parser: *mut JanetParser) -> ::std::os::raw::c_int;
}
pub const JanetAssembleStatus_JANET_ASSEMBLE_OK: JanetAssembleStatus = 0;
pub const JanetAssembleStatus_JANET_ASSEMBLE_ERROR: JanetAssembleStatus = 1;
pub type JanetAssembleStatus = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetAssembleResult {
    pub funcdef: *mut JanetFuncDef,
    pub error: JanetString,
    pub status: JanetAssembleStatus,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetAssembleResult"][::std::mem::size_of::<JanetAssembleResult>() - 24usize];
    ["Alignment of JanetAssembleResult"][::std::mem::align_of::<JanetAssembleResult>() - 8usize];
    ["Offset of field: JanetAssembleResult::funcdef"]
        [::std::mem::offset_of!(JanetAssembleResult, funcdef) - 0usize];
    ["Offset of field: JanetAssembleResult::error"]
        [::std::mem::offset_of!(JanetAssembleResult, error) - 8usize];
    ["Offset of field: JanetAssembleResult::status"]
        [::std::mem::offset_of!(JanetAssembleResult, status) - 16usize];
};
unsafe extern "C" {
    pub fn janet_asm(source: Janet, flags: ::std::os::raw::c_int) -> JanetAssembleResult;
}
unsafe extern "C" {
    pub fn janet_disasm(def: *mut JanetFuncDef) -> Janet;
}
unsafe extern "C" {
    pub fn janet_asm_decode_instruction(instr: u32) -> Janet;
}
pub const JanetCompileStatus_JANET_COMPILE_OK: JanetCompileStatus = 0;
pub const JanetCompileStatus_JANET_COMPILE_ERROR: JanetCompileStatus = 1;
pub type JanetCompileStatus = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct JanetCompileResult {
    pub funcdef: *mut JanetFuncDef,
    pub error: JanetString,
    pub macrofiber: *mut JanetFiber,
    pub error_mapping: JanetSourceMapping,
    pub status: JanetCompileStatus,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of JanetCompileResult"][::std::mem::size_of::<JanetCompileResult>() - 40usize];
    ["Alignment of JanetCompileResult"][::std::mem::align_of::<JanetCompileResult>() - 8usize];
    ["Offset of field: JanetCompileResult::funcdef"]
        [::std::mem::offset_of!(JanetCompileResult, funcdef) - 0usize];
    ["Offset of field: JanetCompileResult::error"]
        [::std::mem::offset_of!(JanetCompileResult, error) - 8usize];
    ["Offset of field: JanetCompileResult::macrofiber"]
        [::std::mem::offset_of!(JanetCompileResult, macrofiber) - 16usize];
    ["Offset of field: JanetCompileResult::error_mapping"]
        [::std::mem::offset_of!(JanetCompileResult, error_mapping) - 24usize];
    ["Offset of field: JanetCompileResult::status"]
        [::std::mem::offset_of!(JanetCompileResult, status) - 32usize];
};
unsafe extern "C" {
    pub fn janet_compile(
        source: Janet,
        env: *mut JanetTable,
        where_: JanetString,
    ) -> JanetCompileResult;
}
unsafe extern "C" {
    pub fn janet_compile_lint(
        source: Janet,
        env: *mut JanetTable,
        where_: JanetString,
        lints: *mut JanetArray,
    ) -> JanetCompileResult;
}
